# UIDC2026_NGI

./: .gitignore  README.md  analyze_collapse_sections.py  pyproject.toml
YS-IWHR-main/: Note.txt
data/: collapses.xlsx
scripts/: EDA.py  analyze_collapse_sections.py  analyze_tunnel_gaps.py  batch_optimise.py  batch_optimize.py  optimise_hyperparameters.py  optimize_hyperparameters.py  preliminary_tests.py  preprocess.py  train.py  undersampling_cost_analysis.py
scripts/config/: main.yaml
scripts/config/model/: catboost.yaml  extra_trees.yaml  gaussian_process.yaml  hist_gradient_boosting.yaml  knn.yaml  lightgbm.yaml  logistic_regression.yaml  random_forest.yaml  svm.yaml  xgboost.yaml  xgboost_native.yaml
src/: A_main.py  Salzburg_Workshop.py  X_library.py  plotting.py
src/tbm_ml/: collapse_section_split.py  hyperparameter_optimisation.py  hyperparameter_optimization.py  plotting.py  preprocess_funcs.py  schema_config.py  train_eval_funcs.py  utility.py
