[project]
name = "tbm-ml"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "hydra-core>=1.3.2",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "ipython",
    "joblib>=1.4.0",
    "lightgbm>=4.6.0",
    "matplotlib",
    "mlflow>=3.4.0",
    "numpy",
    "openpyxl",
    "optuna>=4.5.0",
    "pandas",
    "pip>=25.2",
    "pyarrow",
    "pyod>=2.0.5",
    "scikit-learn",
    "scipy",
    "tqdm",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = ["ipdb>=0.13.13", "isort>=6.0.1", "mypy>=1.18.1", "ruff>=0.13.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/tbm_ml"]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
